--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   "engines": {
     "node": "*"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "chai": "^1.9.1",
     "chai-as-promised": "^4.1.1",
