--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "git://github.com/swlkr/psqljs.git"
   },
-  "main": "lib/",
+  "main": "psql.js",
   "scripts": {
     "test": "NODE_ENV=test ./node_modules/.bin/mocha"
   },
